tests/baselines/reference/genericArrayAssignment1.errors.txt
genericArrayAssignment1.ts(4,1): error TS2322: Type 'number[]' is not assignable to type 'string[]'.
  Type 'number' is not assignable to type 'string'.


==== genericArrayAssignment1.ts (1 errors) ====
    var s: string[];
    var n: number[];
    
    s = n;
    ~
!!! error TS2322: Type 'number[]' is not assignable to type 'string[]'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.